--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
 />
 <link rel="stylesheet" href="./css/lmj.css">
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+<script src="./js/java.js"></script>
 </head>
 <body>
+    <div class="swiper" id="mainbanner">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+        </div>
+        <div class="swiper-pagination"></div>
+
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
     
+        <div class="swiper-scrollbar"></div>
+    </div>
 </body>
 </html>
